cherry-pick Add assets API and deprecate inline assets field for Domain and Dataproduct